--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,14 @@ dependencies {
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+
+    //cordinatorlayout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+    implementation 'com.google.android.material:material:1.8.0'
+
+    //lottie
+    def lottieVersion = "3.4.0"
+    //noinspection GradleDependency
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
