--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     def lottieVersion = "3.4.0"
     //noinspection GradleDependency
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
 }
