--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.YouTube"
         tools:targetApi="31">
         <activity
-            android:name=".ThirdActivity"
+            android:name=".PlayerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.player.PlayerActivity"
             android:exported="false" />
         <activity
             android:name=".ui.video.VideoActivity"
